Fix spacing

--- a/src/styles/elements/typography.scss
+++ b/src/styles/elements/typography.scss
@@ -1,3 +1,13 @@
 /* ==========================================================================
   Elements - Typography
 ========================================================================== */
+
+:is(h1, h2, h3, h4, h5, h6) {
+  font-size: $fs-defaults;
+  font-weight: $fw-defaults;
+  font-style: $ff-defaults;
+}
+
+.body {
+  font-family: $ff-primary;
+}
